force-app/main/default/objects/Position__c/fields/Commited__c.field-meta.xml
<CustomField>
    <fullName>Commited__c</fullName>
    <label>Committed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>