force-app/main/default/objects/Position__c/fields/Contributed__c.field-meta.xml
<CustomField>
    <fullName>Contributed__c</fullName>
    <label>Contributed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>