force-app/main/default/objects/Position__c/fields/Distributed__c.field-meta.xml
<CustomField>
    <fullName>Distributed__c</fullName>
    <label>Distributed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>