force-app/main/default/objects/Position__c/fields/Investing_Entity__c.field-meta.xml
<CustomField>
    <fullName>Investing_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investing Entity</label>
    <referenceTo>Investing_Entity__c</referenceTo>
    <relationshipLabel>Positions</relationshipLabel>
    <relationshipName>Positions</relationshipName>
    <type>Lookup</type>
</CustomField>