force-app/main/default/objects/Position__c/fields/Investment__c.field-meta.xml
<CustomField>
    <fullName>Investment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investment</label>
    <referenceTo>Investment__c</referenceTo>
    <relationshipLabel>Positions</relationshipLabel>
    <relationshipName>Positions</relationshipName>
    <type>Lookup</type>
</CustomField>