force-app/main/default/objects/Position__c/fields/ownership__c.field-meta.xml
<CustomField>
    <fullName>ownership__c</fullName>
    <label>ownership</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>