force-app/main/default/objects/Position__c/fields/Unretuned_Capital__c.field-meta.xml
<CustomField>
    <fullName>Unretuned_Capital__c</fullName>
    <label>Unretuned Capital</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>