force-app/main/default/objects/Position__c/fields/Unreturned_Capital__c.field-meta.xml
<CustomField>
    <fullName>Unreturned_Capital__c</fullName>
    <label>Unreturned Capital</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>